src/css/index.css
@import "~react-image-gallery/styles/css/image-gallery.css";

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  background-image: url("https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80");
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 200px;
  border: 3px solid green;
}

.predict-button {
  position: "absolute";
  z-Index: 9999;
  margin-Left: "30.5vw";
  margin-Top: "10px"
}
.map-top-center select{
  z-Index: 9999;
  margin: 0;
  position: absolute;
  top: 8vh;
  left: 23vw;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border: none
}
.map-top-center-2 select{
  z-Index: 9999;
  margin: 0;
  position: absolute;
  top: 8vh;
  left: 20vw;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border: none
}
.map-top-center button{
  z-Index: 9999;
  margin: 0;
  position: absolute;
  top: 4vh;
  left: 23vw;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border: none
}
.map-top-center-2 button{
  z-Index: 9999;
  margin: 0;
  position: absolute;
  top: 4vh;
  left: 20vw;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border: none
}
.edit-start-button {
  position: absolute;
  z-Index: 9999;
  margin-Left: 10px;
  margin-Top: 60px
}
.edit-end-button {
  position: absolute;
  z-Index: 9999;
  margin-Left: 10px;
  margin-Top: 100px
}
.neighborhood-select {
  position: absolute;
  z-Index: 9999;
  margin-Left: 10px;
  margin-Top: 140px
}
.neighborhood-select-2 {
  position: absolute;
  z-Index: 9999;
  margin-Left: 10px;
  margin-Top: 70px
}
.map-view-container {
  position: relative;
  height: 50vh
}
.map-view-container-2 {
  position: relative;
  height: 40vh;
  padding-right: 0;
}
.map-container {
  position: relative;
  height: 100%;
  width: 100%
}
.pano-view-container {
  position: relative;
  height: 45vh
}
.pano-view-container-2 {
  position: relative;
  height: 95vh;
  padding-left: 0;
}

.alert[data-notify="container"] {
  padding: 10px 10px 10px 20px;
  border-radius: 4px;
  animation: fadeIn ease 0.5s;
  -webkit-animation: fadeIn ease 0.5s;
  -moz-animation: fadeIn ease 0.5s;
  -o-animation: fadeIn ease 0.5s;
  -ms-animation: fadeIn ease 0.5s;
}
.alert span[data-notify="icon"] {
  font-size: 30px;
  display: block;
  left: 15px;
  position: absolute;
  top: 50%;
  margin-top: -15px;
}

.image-gallery-content .image-gallery-slide .image-gallery-image {
  width: 25vw;
}
.image-gallery-slide {
  height: 35vh;
}

#vrview iframe{
  width: 100%;
  height: 40vh
}

.ui.inverted.menu {
  background: peru !important;
}

.react-street-view {
  width: 100%;
  height: 55vh;
  background-color: #eeeeee
}

.currentSelectedLocationDiv {
  background-image: url('../case_background.png');
  width: 100%;
  height: 55vh;
  background-size: 85%;
  background-repeat: no-repeat;
  background-position: center;
  padding-top: 15vh;
  padding-left: 9.5vw;
  padding-right: 5vw;
  font-size: 1.1vw;
}

#pano {
  float: left;
  height: 100%;
  width: 100%;
}

/* 150px is the width of sidebar */
.page-container {
  margin-left: 151px;
  height: 97vh
}

.desc1 {
  font-size: 1vw;
  padding-right: 0vw
}
.desc2 {
  font-size: 1vw;
  padding-left: 0vw
}
.gm-style-iw + div {display: none;}
.gm-style-iw {text-align:center;}

.legend {
  position: absolute;
  bottom: 0px;
  left: 10px;
  padding: 10px;
  margin: 10px;
  border: 2px solid #000;
  background-color: bisque;
}
.legend-item {
  display: flex;
  flex-direction: row;
}
.legend-color {
  height: 30px;
  width: 30px;
  margin-right: 10px;
  margin-bottom: 3px;
}

div {
  white-space: pre-wrap;
}

